# 3d_consistency_preprocessing

./: CMakeLists.txt  README.md
3d_consistency/: 170331_092835877_Camera_2.png.txt  170331_092836377_Camera_2.png.txt  170331_092836877_Camera_2.png.txt  170331_092837877_Camera_2.png.txt
data/: readme.txt
include/3d_consistency_graph/: visualize_consistency.h
src/: visualize_consistency.cpp
src/backups/: backup_09062019.cpp  backup_09062019.h  backup_11062019.cpp  backup_11062019.h
test/: a.out  test.cpp  test_file.txt
